--- a/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.html
+++ b/src/app/components/production-daily-record/production-daily-record-create/production-daily-record-create.component.html
@@ -88,7 +88,7 @@
                     <input matInput
                            type="text"
                            maxlength="15"
-                           pattern="[0-9]*"
+                           pattern="[0-9,]*"
                            inputmode="numeric"
                            [(ngModel)]="finished_pasta_waste"
                            name="finished_pasta_waste"
@@ -118,7 +118,7 @@
         
               <ng-container matColumnDef="Desperdício">
                 <th mat-header-cell *matHeaderCellDef> Desperdício </th>
-                <td mat-cell *matCellDef="let element"> {{element.waste}} </td>
+                <td mat-cell *matCellDef="let element"> {{changeDecimalRepresentation(element.waste)}} </td>
               </ng-container>
         
               <ng-container matColumnDef="Ações">
@@ -331,7 +331,7 @@
                 <input matInput
                         type="text"
                         maxlength="15"
-                        pattern="[0-9]*"
+                        pattern="[0-9,]*"
                         inputmode="numeric"
                         [(ngModel)]="cooked_pasta_discard"
                         name="cooked_pasta_discard"
@@ -367,7 +367,7 @@
         
               <ng-container matColumnDef="Desperdício">
                 <th mat-header-cell *matHeaderCellDef> Desperdício </th>
-                <td mat-cell *matCellDef="let element"> {{element.discard}} </td>
+                <td mat-cell *matCellDef="let element"> {{changeDecimalRepresentation(element.discard)}} </td>
               </ng-container>
         
               <ng-container matColumnDef="Ações">
